<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>testmodule</artifactId>
        <groupId>org.wildcraft.jpms</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.wildcraft.jpms</groupId>
    <artifactId>caztest</artifactId>
    <dependencies>
        <dependency>
            <groupId>org.wildcraft.jpms</groupId>
            <artifactId>caz</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <configuration>
                            <jdkToolchain>
                                <version>9</version>
                            </jdkToolchain>
                            <release>9</release>
                            <compilerArgs>
                                <arg>--add-exports</arg>
                                <!-- module-name/package-name=target-module-name -->
                                <arg>org.wildcraft.jpms.automodule.caz/org.wildcraft.jpms.automodule.caz.impl=org.wildcraft.jpms.testmodule.caztest</arg>
                                <arg>--add-opens</arg>
                                <arg>org.wildcraft.jpms.automodule.caz/org.wildcraft.jpms.automodule.caz.impl=org.wildcraft.jpms.testmodule.caztest</arg>
                            </compilerArgs>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <jdkToolchain>
                        <version>[1.5,9)</version>
                    </jdkToolchain>
                    <source>9</source>
                    <target>9</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>